fix logo alignment and remove search form

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -57,7 +57,7 @@
    ========================================================================== */
    
 	#logo {  
-		padding: 32px 0 33px 0;
+		padding: 10px 0 10px 0;
 	}
 	
 	/**
@@ -523,7 +523,7 @@
    =Content
    ========================================================================== */
    	
-	#content {}
+	#content { margin-top: 20px; }
 
 /* ==========================================================================
    =Page Header
